Resolves: tdf#117737 combobox menu misplaced if wrap-width set

so use ellipsize instead and set the height to one single line

Change-Id: Icb124669410c041880ce468f3cf56fdb4bc1c9f1